fixed navbar not opening on smaller screens

--- a/src/app/shared/navbar/navbar.component.css
+++ b/src/app/shared/navbar/navbar.component.css
@@ -14,6 +14,7 @@ nav img:hover {
   font-size: 1.2rem;
   position: relative;
   margin-top: 0.36em;
+  align-self: center;
 }
 
 .nav-item a:hover {
@@ -49,8 +50,12 @@ p {
   color: rgb(140, 192, 187);
 }
 
-.navbar-brand {
+.roots-wrapper .navbar-brand {
   font-size: 30px;
-  margin-top: 0.3em;
   margin-left: 0.5em;
+}
+
+.roots-wrapper {
+  display: flex;
+  align-items: center;
 }
